# hterm

./: .gitignore  README.md  build.bat  build.py  hterm.spec  pyproject.toml  requirements.txt
hterm/: main.py
hterm/common/: config.py  general.py  quick.py  session.py  setting.py  tigger.py  trigger.py
hterm/profile/: quick.yaml  session.yaml
hterm/profiles/: quick.yaml  session.yaml  setting.yaml  tigger.yaml  trigger.yaml
hterm/scripts/quick/: 测试.py
hterm/terminal/: __init__.py  color.py  highlight.py  local_terminal.py  serial_terminal.py  ssh_terminal.py  terminal.py  terminal_base.py  terminal_local.py  terminal_serial.py  terminal_ssh.py  vt100.py
hterm/ui/: form.ui  form_ui.py  main.ui  main_ui.py  quick.ui  quick_ui.py  resources.qrc  resources_rc.py  session.ui  session_ui.py  setting.ui  setting_ui.py  tigger_ui.py  trigger.ui  trigger_ui.py
